:meat_on_bone: Fixed up Nav somewhat - fixed the nav, namely a safari error where the svg sprites needed to be wrapped in an <g> - also just fixing up my whacky spacing scheme - moved the social sprites to their own partial, should be a bit easier to manage going forward

--- a/themes/blank/assets/sass/partials/_nav.scss
+++ b/themes/blank/assets/sass/partials/_nav.scss
@@ -80,6 +80,7 @@
           li {
             display: flex;
             justify-content: flex-end;
+            margin: unset;
           }
         }
       }
@@ -144,12 +145,26 @@
           }
         }
 
-        min-height: 7ex;
+        // min-height: 7ex;
         // padding: 2ex;
         // margin: 0 0.15ex;
       }
+      
+      .text-link {
+
+        @include media('<tablet') {
+          align-self: flex-end;
+        }
+        align-self: center;        
+      }
 
       .social-icon {
+        @include media('<tablet') {
+          align-self: flex-end;
+        }
+
+        align-self: center;
+
         a {
           display: block;
           // width: 3.5rem;
